--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
-    "next-auth": "^4.24.10",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "19.0.0-rc-69d4b800-20241021 || ^18",
+    "react-dom": "19.0.0-rc-69d4b800-20241021 || ^18",
     "react-hook-form": "^7.53.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
